--- a/DayDaily/Views/SettingView.xaml
+++ b/DayDaily/Views/SettingView.xaml
@@ -20,44 +20,29 @@
 
     <UserControl.Resources>
         <ResourceDictionary>
-            <Storyboard x:Key="bounceArrowsStoryboard" AutoReverse="True" RepeatBehavior="Forever">
-                <DoubleAnimationUsingKeyFrames Storyboard.TargetProperty="(UIElement.RenderTransform).(TransformGroup.Children)[3].(TranslateTransform.Y)" Storyboard.TargetName="downArrow">
-                    <EasingDoubleKeyFrame KeyTime="0:0:0.7" Value="20">
-                        <EasingDoubleKeyFrame.EasingFunction>
-                            <BackEase EasingMode="EaseOut" Amplitude="2"/>
-                        </EasingDoubleKeyFrame.EasingFunction>
-                    </EasingDoubleKeyFrame>
-                </DoubleAnimationUsingKeyFrames>
-            </Storyboard>
             <cvt:StringFormatConverter x:Key="stringFormatConverter" />
             <cvt:SizeToStringConverter x:Key="sizeToStringConverter" />
             <SolidColorBrush x:Key="indicatorColor" Color="#7F000000" />
         </ResourceDictionary>
     </UserControl.Resources>
 
-    <i:Interaction.Triggers>
-        <i:EventTrigger EventName="Loaded">
-            <ei:ControlStoryboardAction Storyboard="{StaticResource bounceArrowsStoryboard}" ControlStoryboardOption="Play"/>
-        </i:EventTrigger>
-    </i:Interaction.Triggers>
-
     <UserControl.InputBindings>
-        <KeyBinding Command="{Binding MoveFocusCommand}" Key="Left" CommandParameter="{x:Static vm:MoveFocusType.Left}" />
-        <KeyBinding Command="{Binding MoveFocusCommand}" Key="Right" CommandParameter="{x:Static vm:MoveFocusType.Right}" />
-        <KeyBinding Command="{Binding CompleteCommand}" Key="Down" />
+        <KeyBinding Command="{Binding MoveFocusCommand}" Key="Up" CommandParameter="{x:Static vm:MoveFocusType.Left}" />
+        <KeyBinding Command="{Binding MoveFocusCommand}" Key="Down" CommandParameter="{x:Static vm:MoveFocusType.Right}" />
+        <KeyBinding Command="{Binding CompleteCommand}" Key="Return" />
     </UserControl.InputBindings>
 
     <Grid>
         <WrapPanel Orientation="Vertical" HorizontalAlignment="Center" VerticalAlignment="Center">
-            <TextBlock FontSize="60" Text="화살표 키를 이용해 출력할 화면을 선택해주세요" HorizontalAlignment="Center" />
+            <TextBlock FontSize="60" Text="화살표 키를 이용해 출력할 화면을 선택 후 Enter키를 입력해주세요" HorizontalAlignment="Center" Margin="0,0,0,30" />
             <ItemsControl ItemsSource="{Binding ScreenList}" Focusable="False">
                 <ItemsControl.ItemsPanel>
                     <ItemsPanelTemplate>
-                        <StackPanel Orientation="Horizontal" HorizontalAlignment="Center" VerticalAlignment="Center" />
+                        <StackPanel Orientation="Vertical" HorizontalAlignment="Center" VerticalAlignment="Center" />
                     </ItemsPanelTemplate>
                 </ItemsControl.ItemsPanel>
                 <ItemsControl.ItemTemplate>
-                    <DataTemplate DataType="{x:Type vo:ScreenInfo}">
+                    <DataTemplate DataType="{x:Type vo:DisplayDeviceInfo}">
                         <DataTemplate.Resources>
                             <Storyboard x:Key="ScreenFocused" RepeatBehavior="Forever" AutoReverse="True">
                                 <DoubleAnimationUsingKeyFrames Storyboard.TargetProperty="(UIElement.RenderTransform).(TransformGroup.Children)[0].(ScaleTransform.ScaleX)">
@@ -76,7 +61,7 @@
                                 </DoubleAnimationUsingKeyFrames>
                             </Storyboard>
                         </DataTemplate.Resources>
-                        <Border CornerRadius="20" BorderBrush="#FFD8D8D8" BorderThickness="1" Margin="40" RenderTransformOrigin="0.5,0.5" Background="White">
+                        <Border CornerRadius="20" BorderBrush="#FFD8D8D8" BorderThickness="1" Margin="0,20,0,0" RenderTransformOrigin="0.5,0.5" Background="White">
                             <Border.RenderTransform>
                                 <TransformGroup>
                                     <ScaleTransform/>
@@ -113,36 +98,21 @@
                                     </Style.Triggers>
                                 </Style>
                             </Border.Style>
-                            <Grid Width="150" Margin="20">
+                            <Grid Margin="20">
                                 <StackPanel Orientation="Vertical">
-                                    <TextBlock HorizontalAlignment="Center" Text="SCREEN">
-                                        <TextBlock.Style>
-                                            <Style TargetType="TextBlock" BasedOn="{StaticResource {x:Type TextBlock}}">
-                                                <Setter Property="FontFamily" Value="/DayDaily;component/Resources/#NanumSquare" />
-                                                <Setter Property="FontSize" Value="23.5px" />
-                                            </Style>
-                                        </TextBlock.Style>
-                                    </TextBlock>
-                                    <TextBlock HorizontalAlignment="Center" Margin="0,-10">
+                                    <TextBlock HorizontalAlignment="Center" Text="{Binding Info.DeviceString}">
                                         <TextBlock.Style>
                                             <Style TargetType="TextBlock" BasedOn="{StaticResource {x:Type TextBlock}}">
                                                 <Setter Property="FontFamily" Value="/DayDaily;component/Resources/#NanumSquare ExtraBold" />
-                                                <Setter Property="FontSize" Value="75px" />
+                                                <Setter Property="FontSize" Value="30px" />
                                             </Style>
                                         </TextBlock.Style>
-                                        <TextBlock.Text>
-                                            <Binding Path="Info.Index" Converter="{StaticResource stringFormatConverter}">
-                                                <Binding.ConverterParameter>
-                                                    <sys:String>#{0}</sys:String>
-                                                </Binding.ConverterParameter>
-                                            </Binding>
-                                        </TextBlock.Text>
                                     </TextBlock>
-                                    <TextBlock Text="{Binding Info.Resolution, Converter={StaticResource sizeToStringConverter}}" HorizontalAlignment="Center">
+                                    <TextBlock Text="{Binding Info.Region.Size, Converter={StaticResource sizeToStringConverter}}" HorizontalAlignment="Center">
                                         <TextBlock.Style>
                                             <Style TargetType="TextBlock" BasedOn="{StaticResource {x:Type TextBlock}}">
                                                 <Setter Property="FontFamily" Value="/DayDaily;component/Resources/#NanumSquare Light" />
-                                                <Setter Property="FontSize" Value="17px" />
+                                                <Setter Property="FontSize" Value="20px" />
                                             </Style>
                                         </TextBlock.Style>
                                     </TextBlock>
@@ -152,26 +122,6 @@
                     </DataTemplate>
                 </ItemsControl.ItemTemplate>
             </ItemsControl>
-        </WrapPanel>
-
-        <WrapPanel Margin="20" Orientation="Vertical" HorizontalAlignment="Center" VerticalAlignment="Bottom">
-            <TextBlock TextAlignment="Center" Foreground="{StaticResource indicatorColor}">
-                    출력되고 있는 화면은 마음에 드시나요?<LineBreak />
-                    Down Key를 눌러주세요
-            </TextBlock>
-            <Viewbox x:Name="downArrow" Width="48" Height="48" RenderTransformOrigin="0.5,0.5">
-                <Viewbox.RenderTransform>
-                    <TransformGroup>
-                        <ScaleTransform/>
-                        <SkewTransform/>
-                        <RotateTransform/>
-                        <TranslateTransform/>
-                    </TransformGroup>
-                </Viewbox.RenderTransform>
-                <Canvas Width="24" Height="24">
-                    <Path Data="M7.41,8.58L12,13.17L16.59,8.58L18,10L12,16L6,10L7.41,8.58Z" Fill="{StaticResource indicatorColor}" />
-                </Canvas>
-            </Viewbox>
         </WrapPanel>
     </Grid>
 
